--- a/index.html
+++ b/index.html
@@ -110,11 +110,12 @@
             <img src="./Images/downArrow.png" class="ms-2" alt="" />
           </button>
           <ul class="d-flex gap-3 gap-lg-4 category-list">
-            <li><a href=""> HOME </a></li>
+            <li><a href="/"> HOME </a></li>
             <li><a href=""> NOVELTY </a></li>
             <li><a href=""> CHNCELLERY </a></li>
             <li><a href=""> DISCOUNT </a></li>
-            <li><a href=""> CONTACT US </a></li>
+            <li><a href="./Pages/ContactUs/contact.html"> CONTACT US </a></li>
+            <li><a href="./Pages/AboutUs/about.html">ABOUT US </a></li>
           </ul>
           <h2 class="contact">
             <img src="./Images/contact.png" /> +73 7278 72 1123 <br /><span
@@ -586,3 +587,4 @@
     ></script>
   </body>
 </html>
+<!-- --------------------------------------- -->
