Made contact us page responsive

--- a/index.html
+++ b/index.html
@@ -562,7 +562,9 @@
             <li class="list-group-item">Coupons</li>
           </ul>
         </div>
-        <div class="col-6 col-lg-2 d-flex mt-5 p-0 justify-content-end">
+        <div
+          class="col-6 col-lg-2 d-flex mt-5 p-0 ms-5 ms-md-0 justify-content-end"
+        >
           <img
             src="./Images/play-store.png"
             class="img-fluid play-store mt-4"
@@ -577,7 +579,11 @@
       </div>
     </div>
     <hr />
-    <div class="p-4"></div>
+    <div class="p-2">
+      <p class="text-center footer-text">
+        &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
+      </p>
+    </div>
     <!-- Footer Ends -->
 
     <script
