--- a/Pages/ContactUs/contact.html
+++ b/Pages/ContactUs/contact.html
@@ -129,82 +129,110 @@
     <!-- Category Ends -->
 
     <!-- Contact  section -->
-    <div class="container-fluid py-4">
+    <div class="container-fluid py-4 p-1">
       <div class="row mx-auto">
-        <form class="mx-auto contact-form d-flex ps-5">
-          <div class="">
-            <h1 class="text-center">Contact Us</h1>
-            <p class="text-center">
-              If you have any questions or comments please contact us via the
-              form below. We would love to hear from you !
-            </p>
-            <div class="d-flex gap-5">
-              <div class="form-group">
-                <input
-                  placeholder="Your name"
-                  type="text"
-                  class="form-control ps-4"
-                  id="firstName"
-                  name="firstName"
-                  required
-                />
+        <div class="col-12 mx-auto p-0">
+          <form class="contact-form">
+            <div class="row">
+              <div class="col-12">
+                <h1 class="text-center">Contact Us</h1>
+                <p class="text-center">
+                  If you have any questions or comments please contact us via
+                  the form below. We would love to hear from you !
+                </p>
               </div>
-              <div class="form-group">
-                <input
-                  placeholder="Your name"
-                  type="text"
-                  class="form-control ps-4"
-                  id="lastName"
-                  name="lastName"
-                  required
-                />
+              <div class="col-lg-7">
+                <div class="row">
+                  <div class="col-lg-6 col-12">
+                    <div class="form-group">
+                      <input
+                        placeholder="Your name"
+                        type="text"
+                        class="form-control w-100 ps-4"
+                        id="firstName"
+                        name="firstName"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-12 mt-3 mt-lg-0">
+                    <div class="form-group">
+                      <input
+                        placeholder="Your name"
+                        type="text"
+                        class="form-control w-100 ps-4"
+                        id="lastName"
+                        name="lastName"
+                        required
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="form-group my-3">
+                    <input
+                      placeholder="Your phone number"
+                      type="text"
+                      class="form-control w-100 number ps-4"
+                      id="phone"
+                      name="phone"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="form-group my-3">
+                    <textarea
+                      placeholder="Your message"
+                      class="form-control w-100 ps-4"
+                      id="message"
+                      name="message"
+                      rows="5"
+                      required
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="text-center submit-btn-wrapper py-4 mb-5">
+                    <input
+                      type="submit"
+                      value="SEND MESSAGE"
+                      class="btn text-center"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mx-auto">
+                <div class="need-help mx-auto p-4">
+                  <img src="./Images/help.png" class="help-img" alt="" />
+                  <h3 class="text-center need-help-text py-3">Need Help</h3>
+                  <h4 class="mt-4">Email Us</h4>
+                  <h5>suport@companyname.com</h5>
+                  <h4>Call us</h4>
+                  <h5>1800-4655-563</h5>
+                  <h4>Working Time</h4>
+                  <h5>Mon - Sat , 9 am to 7 pm</h5>
+                  <h3 class="text-center mt-5">Get in Touch</h3>
+                  <div
+                    class="d-flex gap-3 justify-content-center align-items-center"
+                  >
+                    <img src="./Images/call.png" class="need-help-img" alt="" />
+                    <img
+                      src="./Images/message.png"
+                      class="need-help-img"
+                      alt=""
+                    />
+                    <img
+                      src="./Images/letter.png"
+                      class="need-help-img"
+                      alt=""
+                    />
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="form-group my-3">
-              <input
-                placeholder="Your phone number"
-                type="text"
-                class="form-control number ps-4"
-                id="phone"
-                name="phone"
-                required
-              />
-            </div>
-            <div class="form-group my-3">
-              <textarea
-                placeholder="Your message"
-                class="form-control ps-4"
-                id="message"
-                name="message"
-                rows="5"
-                required
-              ></textarea>
-            </div>
-            <div class="text-center submit-btn-wrapper py-4 mb-5">
-              <input
-                type="submit"
-                value="SEND MESSAGE"
-                class="btn btn-lg text-center"
-              />
-            </div>
-          </div>
-          <div class="need-help p-4">
-            <img src="./Images/help.png" class="help-img" alt="" />
-            <h3 class="text-center need-help-text py-3">Need Help</h3>
-            <h4 class="mt-4">Email Us</h4>
-            <h5>suport@companyname.com</h5>
-            <h4>Call us</h4>
-            <h5>1800-4655-563</h5>
-            <h4>Working Time</h4>
-            <h5>Mon - Sat , 9 am to 7 pm</h5>
-            <h3 class="text-center mt-5">Get in Touch</h3>
-            <div class="d-flex gap-3 justify-content-center align-items-center">
-              <img src="./Images/call.png" alt="" />
-              <img src="./Images/message.png" alt="" />
-              <img src="./Images/letter.png" alt="" />
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
 
@@ -242,7 +270,9 @@
             <li class="list-group-item">Coupons</li>
           </ul>
         </div>
-        <div class="col-6 col-lg-2 d-flex mt-5 p-0 justify-content-end">
+        <div
+          class="col-6 col-lg-2 d-flex ms-5 ms-md-0 mt-5 p-0 justify-content-end"
+        >
           <img
             src="./Images/play-store.png"
             class="img-fluid play-store mt-4"
