Added about us page

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <!-- Catalog  -->
     <div class="container-fluid catalog my-4">
       <div class="row mx-auto">
-        <h1>CATALOG</h1>
+        <h1 class="p-0">CATALOG</h1>
         <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
@@ -426,8 +426,8 @@
       <div class="row mx-auto">
         <h1 class="p-0">Deals Of The Week</h1>
 
-        <div class="col-12 deals-of-the-week1 col-md-2 my-3 my-md-0">
-          <div class="card mx-auto">
+        <div class="col-12 deals-of-the-week1 col-md-2 my-3 my-md-0 p-0">
+          <div class="card mx-auto ms-0">
             <img src="./Images/deals-of-the-week1.png" class="card-img-top" />
           </div>
         </div>
@@ -466,11 +466,11 @@
 
     <!-- Deals Of The Week Second section  -->
     <div class="container-fluid my-4 my-lg-5 catalog">
-      <div class="row mx-auto">
-        <h1>Deals Of The Week</h1>
+      <div class="row mx-auto p-0">
+        <h1 class="p-0">Deals Of The Week</h1>
 
-        <div class="col-6 col-md-2 me-lg-4 me-0">
-          <div class="card">
+        <div class="col-6 col-md-2 me-lg-4 me-0 p-0">
+          <div class="card p-0">
             <img
               src="./Images/deals-of-the-week4.png"
               class="card-img-top"
