--- a/Pages/AboutUs/about.html
+++ b/Pages/AboutUs/about.html
@@ -128,6 +128,54 @@
     </div>
     <!-- Category Ends -->
 
+    <div class="container-fluid my-4">
+      <div class="row mx-auto bg-color py-4 py-lg-5">
+        <div class="col-12">
+          <h1 class="text-center about-us">About Us</h1>
+        </div>
+        <div class="col-12 mx-auto my-4 top-img">
+          <div class="images mx-auto text-center">
+            <img src="./Images/man1.png" class="img-fluid" alt="" />
+            <img src="./Images/man2.png" class="img-fluid" alt="" />
+            <img src="./Images/man3.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+        <div class="col-12 mx-auto my-4">
+          <p>
+            <span class="welcome">Welcome</span> to our website! We're thrilled
+            that you've found us and are interested in learning more about who
+            we are.
+          </p>
+          <p>
+            At our core, we are a team of passionate entrepreneurs who believe
+            that commerce can be a force for good in the world. We started this
+            business with the goal of creating a platform where people could buy
+            and sell products they love, while also making a positive impact on
+            the world around us.
+          </p>
+          <p>
+            Thank you for considering our W commerce website for your shopping
+            needs. We hope that you'll join us on our mission to make commerce a
+            force for good in the world. If you have any questions or feedback,
+            please don't hesitate to get in touch with us. We'd love to hear
+            from you!
+          </p>
+        </div>
+
+        <div class="col-12">
+          <h2 class="text-center our-progress">
+            <span class="O">O</span>ur Progress
+          </h2>
+        </div>
+        <div class="col-12 text-center bottom-img">
+          <img src="./Images/total-user.png" class="img-fluid" alt="" />
+          <img src="./Images/cities.png" class="img-fluid" alt="" />
+          <img src="./Images/countries.png" class="img-fluid" alt="" />
+          <img src="./Images/total-product.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <div class="container-fluid mt-5 footer py-3">
       <div class="row mx-auto">
@@ -160,7 +208,9 @@
             <li class="list-group-item">Coupons</li>
           </ul>
         </div>
-        <div class="col-6 col-lg-2 d-flex mt-5 p-0 justify-content-end">
+        <div
+          class="col-6 col-lg-2 d-flex mt-5 p-0 justify-content-end ms-sm-0 ms-4"
+        >
           <img
             src="./Images/play-store.png"
             class="img-fluid play-store mt-4"
@@ -173,6 +223,12 @@
           />
         </div>
       </div>
+    </div>
+    <hr />
+    <div class="p-2">
+      <p class="text-center footer-text">
+        &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
+      </p>
     </div>
     <!-- Footer Ends -->
     <script
