--- a/Pages/ContactUs/contact.html
+++ b/Pages/ContactUs/contact.html
@@ -286,6 +286,12 @@
         </div>
       </div>
     </div>
+    <hr />
+    <div class="p-2">
+      <p class="text-center footer-text">
+        &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
+      </p>
+    </div>
     <!-- Footer Ends -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
