--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./CSS/index.css" />
     <link rel="stylesheet" href="./CSS/index_responsive.css" />
   </head>
@@ -129,24 +136,131 @@
     <hr />
     <!-- Category Ends -->
 
-    <!-- Banner  -->
-    <div class="container-fluid">
+    <!-- Carousel Section -->
+    <div class="container-fluid my-5">
       <div class="row mx-auto">
-        <div class="col-12 hero-sec">
-          <h1 class="clerical">Clerical GOODS</h1>
-          <p class="hurry-up">hurry up</p>
-          <button class="read-more">Read More</button>
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide hero-sec"
+          data-bs-ride="false"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./Images/homepage-banner.png"
+                class="d-block w-100 img-fluid"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="clerical">Clerical GOODS</h5>
+                <p class="hurry-up">hurry Up</p>
+                <button class="read-more">Read More</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://images.unsplash.com/photo-1472851294608-062f824d29cc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="clerical">Clerical GOODS</h5>
+                <p class="hurry-up">hurry Up</p>
+                <button class="read-more">Read More</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://plus.unsplash.com/premium_photo-1664202526047-405824c633e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="clerical">Clerical GOODS</h5>
+                <p class="hurry-up">hurry Up</p>
+                <button class="read-more">Read More</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://images.unsplash.com/photo-1546213290-e1b492ab3eee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="clerical">Clerical GOODS</h5>
+                <p class="hurry-up">hurry Up</p>
+                <button class="read-more">Read More</button>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </div>
-    <!-- Banner  Ends -->
+    <!-- Carousel Section Ends -->
 
     <!-- Menu -->
     <div class="container-fluid my-4">
       <div class="row mx-auto">
         <div class="col-12 mx-auto p-0">
           <div class="card-menu menu">
-            <h1 class="my-4">Menu</h1>
+            <div class="my-4 d-flex align-items-center justify-content-between">
+              <h1>Menu</h1>
+              <div class="arrow-wrapper d-flex">
+                <div class="arrow-icons">
+                  <i class="fa-solid fa-arrow-left"></i>
+                </div>
+                <div class="arrow-icons ms-4">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </div>
+              </div>
+            </div>
             <div class="card-images">
               <img
                 src="./Images/menu1.png"
@@ -467,7 +581,12 @@
     <!-- Deals Of The Week Second section  -->
     <div class="container-fluid my-4 my-lg-5 catalog">
       <div class="row mx-auto p-0">
-        <h1 class="p-0">Deals Of The Week</h1>
+        <div class="p-0 ms-0 d-flex justify-content-between align-items-center">
+          <h1 class="p-0">Deals Of The Week</h1>
+          <h3 class="p-0">
+            All Deals <i class="fa-solid fa-greater-than"></i>
+          </h3>
+        </div>
 
         <div class="col-6 col-md-2 me-lg-4 me-0 p-0">
           <div class="card p-0">
