Added login form

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </nav>
     </header>
     <!-- Navbar  Ends -->
-
+    <!-- ================================================================================================================= -->
     <!-- Category  -->
     <div class="container-fluid pt-2">
       <div class="row mx-auto">
@@ -135,6 +135,7 @@
     </div>
     <hr />
     <!-- Category Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Carousel Section -->
     <div class="container-fluid my-5">
@@ -244,6 +245,7 @@
       </div>
     </div>
     <!-- Carousel Section Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Menu -->
     <div class="container-fluid my-4">
@@ -318,6 +320,7 @@
       </div>
     </div>
     <!-- Menu Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Office and School  -->
     <div class="container-fluid mt-4">
@@ -345,6 +348,7 @@
       </div>
     </div>
     <!-- Office and School Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Catalog  -->
     <div class="container-fluid catalog my-4">
@@ -412,6 +416,7 @@
         </div>
       </div>
     </div>
+    <!-- ================================================================================================================= -->
 
     <div class="container-fluid catalog">
       <div class="row mx-auto">
@@ -477,6 +482,7 @@
         </div>
       </div>
     </div>
+    <!-- ================================================================================================================= -->
 
     <div class="container-fluid catalog my-4">
       <div class="row mx-auto">
@@ -534,6 +540,7 @@
       </div>
     </div>
     <!-- Catalog Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Deals Of The Week First section  -->
     <div class="container-fluid my-4 my-lg-5 catalog">
@@ -577,6 +584,7 @@
       </div>
     </div>
     <!-- Deals Of The Week First Section Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Deals Of The Week Second section  -->
     <div class="container-fluid my-4 my-lg-5 catalog">
@@ -624,6 +632,7 @@
       </div>
     </div>
     <!-- Deals Of The Week Second Section Ends -->
+    <!-- ================================================================================================================= -->
 
     <!-- Image Overlay -->
     <div class="container-fluid">
@@ -642,13 +651,14 @@
               placeholder="Your Email Address"
               class="form-control"
             />
-            <button class="ms-3 text-center">Register</button>
+            <button class="ms-md-3 ms-1 text-center">Register</button>
           </div>
         </div>
       </div>
     </div>
     <!-- Image Overlay Ends -->
 
+    <!-- ================================================================================================================= -->
     <!-- Footer -->
     <div class="container-fluid mt-5">
       <div class="row mx-auto">
@@ -698,6 +708,8 @@
       </div>
     </div>
     <hr />
+    <!-- ================================================================================================================= -->
+
     <div class="p-2">
       <p class="text-center footer-text">
         &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
@@ -705,11 +717,61 @@
     </div>
     <!-- Footer Ends -->
 
+    <!-- ================================================================================================================= -->
+
+    <!-- Login Popup-->
+
+    <div class="container-fluid login-form-wrapper">
+      <div class="row mx-auto">
+        <div class="col-12 p-0">
+          <div class="row">
+            <div class="col-md-8 mx-auto text-center">
+              <form action="" id="loginForm" class="login-form">
+                <div class="d-flex justify-content-end pt-4">
+                  <img
+                    src="./Images/close-btn.png"
+                    onclick="closeLogin()"
+                    class="close-btn"
+                    alt=""
+                  />
+                </div>
+                <h1 class="login text-center">Login</h1>
+                <h4 class="my-3">
+                  Don't you have an account?
+                  <button class="register-here">Register here</button>
+                </h4>
+                <div class="login-email d-flex align-items-center">
+                  <img src="./Images/login-email.png" alt="" />
+                  <input type="email" class="w-100" placeholder="Email Id" />
+                </div>
+                <div class="login-password d-flex align-items-center">
+                  <img src="./Images/login-password.png" alt="" />
+                  <input type="password" class="w-100" placeholder="Password" />
+                </div>
+                <div class="form-submit">
+                  <input type="submit" value="Login" />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Login Popup Ends-->
+
+    <!-- ================================================================================================================= -->
+
+    <!-- Register Pop up -->
+
+    <!-- Register Pop up Ends -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="./index.js"></script>
   </body>
 </html>
 <!-- --------------------------------------- -->
