--- a/index.html
+++ b/index.html
@@ -892,7 +892,6 @@
                 <div class="d-flex align-items-center gap-3">
                   <img src="./Images/login-password.png" alt="" />
                   <input
-                    class=""
                     type="password"
                     name="password"
                     id="confirm-password"
@@ -909,6 +908,7 @@
                 />
               </div>
             </div>
+
             <div>
               <div class="d-flex align-items-center gap-4 wrapper mt-4 py-3">
                 <img src="./Images/phone.png" alt="" />
@@ -917,10 +917,12 @@
                   type="text"
                   name="phone_number"
                   id="phone-number"
+                  value=""
                   placeholder="Phone Number"
                 />
               </div>
             </div>
+            <div class="error" id="error"></div>
             <div>
               <div
                 class="my-3 d-flex align-items-center gap-2 justify-content-center"
@@ -930,7 +932,7 @@
               </div>
             </div>
             <div>
-              <button type="button" class="register-btn">Register</button>
+              <button type="submit" class="register-btn">Register</button>
             </div>
           </form>
         </div>
