--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="./CSS/index_responsive.css" />
   </head>
   <body>
-    <!-- Navbar  -->
     <div id="body">
+      <!-- Navbar  -->
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -85,11 +85,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="/Pages/yourcart.html
-                "
-                  >
+                  <a class="nav-link" href="./Pages/Yourcart/yourcart.html">
                     <span><img src="./Images/cart.png" alt="" /></span>
                     <span
                       ><img
@@ -179,6 +175,12 @@
                 data-bs-slide-to="2"
                 aria-label="Slide 3"
               ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              ></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -208,6 +210,21 @@
               <div class="carousel-item">
                 <img
                   src="https://plus.unsplash.com/premium_photo-1664202526047-405824c633e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div
+                  class="carousel-caption d-none d-md-block"
+                  data-bs-interval="100"
+                >
+                  <h5 class="clerical">Clerical GOODS</h5>
+                  <p class="hurry-up">hurry Up</p>
+                  <button class="read-more">Read More</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://images.unsplash.com/photo-1678005216513-6f6036562409?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -941,7 +958,6 @@
     <!-- Register Pop up Ends -->
     <!-- ================================================================================================================= -->
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
