Made scrolling menu section

--- a/index.html
+++ b/index.html
@@ -269,80 +269,48 @@
       <!-- ================================================================================================================= -->
 
       <!-- Menu -->
-      <div class="container-fluid my-4">
-        <div class="row mx-auto">
-          <div class="col-12 mx-auto p-0">
-            <div class="card-menu menu">
-              <div
-                class="my-4 d-flex align-items-center justify-content-between"
-              >
+      <div class="container-fluid">
+        <div class="row mx-auto p-0">
+          <div class="col-12 p-0">
+            <div class="menu-wrapper">
+              <div class="heading">
                 <h1>Menu</h1>
-                <div class="arrow-wrapper d-flex">
-                  <div class="arrow-icons">
+                <div class="arrows">
+                  <div id="left" class="left-arrow i">
                     <i class="fa-solid fa-arrow-left"></i>
                   </div>
-                  <div class="arrow-icons ms-4">
+                  <div id="right" class="right-arrow i">
                     <i class="fa-solid fa-arrow-right"></i>
                   </div>
                 </div>
               </div>
-              <div class="card-images">
-                <img
-                  src="./Images/menu1.png"
-                  class="img-fluid one"
-                  alt="Image 1"
-                />
-                <img
-                  src="./Images/menu2.png"
-                  class="img-fluid two"
-                  alt="Image 2"
-                />
-                <img
-                  src="./Images/menu3.png"
-                  class="img-fluid three"
-                  alt="Image 3"
-                />
-                <img
-                  src="./Images/menu4.png"
-                  class="img-fluid four"
-                  alt="Image 4"
-                />
-                <img
-                  src="./Images/menu5.png"
-                  class="img-fluid five"
-                  alt="Image 5"
-                />
-                <img
-                  src="./Images/menu6.png"
-                  class="img-fluid six"
-                  alt="Image 6"
-                />
-                <img
-                  src="./Images/menu7.png"
-                  class="img-fluid seven"
-                  alt="Image 7"
-                />
-                <img
-                  src="./Images/menu8.png"
-                  class="img-fluid eight"
-                  alt="Image 8"
-                />
-                <img
-                  src="./Images/menu9.png"
-                  class="img-fluid nine"
-                  alt="Image 9"
-                />
-                <img
-                  src="./Images/menu10.png"
-                  class="img-fluid 10"
-                  alt="Image ten"
-                />
+              <div class="menu-carousel">
+                <img src="./Images/menu1.png" class="p-0" alt="" />
+                <img src="./Images/menu2.png" alt="" />
+                <img src="./Images/menu3.png" alt="" />
+                <img src="./Images/menu4.png" alt="" />
+                <img src="./Images/menu5.png" alt="" />
+                <img src="./Images/menu6.png" alt="" />
+                <img src="./Images/menu7.png" alt="" />
+                <img src="./Images/menu8.png" alt="" />
+                <img src="./Images/menu9.png" alt="" />
+                <img src="./Images/menu10.png" alt="" />
+                <img src="./Images/menu2.png" alt="" />
+                <img src="./Images/menu3.png" alt="" />
+                <img src="./Images/menu4.png" alt="" />
+                <img src="./Images/menu5.png" alt="" />
+                <img src="./Images/menu6.png" alt="" />
+                <img src="./Images/menu7.png" alt="" />
+                <img src="./Images/menu8.png" alt="" />
+                <img src="./Images/menu9.png" alt="" />
+                <img src="./Images/menu10.png" alt="" />
               </div>
             </div>
           </div>
         </div>
       </div>
       <!-- Menu Ends -->
+
       <!-- ================================================================================================================= -->
 
       <!-- Office and School  -->
@@ -379,7 +347,13 @@
           <h1 class="p-0">CATALOG</h1>
           <div class="col-6 col-md-2 p-0">
             <div class="card">
-              <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+              <div class="overflow-hidden catalog-img-wrapper">
+                <img
+                  src="./Images/catalog1.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </div>
               <div class="card-body">
                 <h5 class="card-title p-0">Clerical GOODS</h5>
                 <p class="card-text p-0">10.00$</p>
@@ -963,6 +937,18 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.3.js"
+      integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"
+      integrity="sha512-Gfrxsz93rxFuB7KSYlln3wFqBaXUc1jtt3dGCp+2jTb563qYvnUBM/GP2ZUtRC27STN/zUamFtVFAIsRFoT6/w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <script src="./index.js"></script>
   </body>
 </html>
