--- a/Pages/DesktopEssential/desktop-essential.html
+++ b/Pages/DesktopEssential/desktop-essential.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Wishlist | Awali Stationary WLL</title>
+    <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,16 +18,21 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./desktopessential.css" />
-    <link rel="stylesheet" href="./responsive_desktopessential.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
+
+    <link rel="stylesheet" href="./desktop-essential.css" />
+    <link rel="stylesheet" href="./desktop-essential-responsive.css" />
   </head>
   <body>
     <div id="body">
-      <!-- Navbar  -->
+      <!-- Navbar -->
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../../index.html"
+            <a class="navbar-brand" href="/"
               ><img src="Images/logo.png" class="img-fluid logo" alt="logo"
             /></a>
             <button
@@ -107,7 +112,7 @@
         </nav>
       </header>
       <!-- Navbar  Ends -->
-      <!-- ================================================================================================================= -->
+
       <!-- Category  -->
       <div class="container-fluid pt-2">
         <div class="row mx-auto">
@@ -148,7 +153,7 @@
                 <h2>Facility</h2>
               </div>
             </div>
-            <ul class="d-flex gap-3 gap-xl-4 category-list">
+            <ul class="d-flex gap-3 gap-lg-4 category-list">
               <li><a href="../../index.html"> HOME </a></li>
               <li>
                 <a href="../DealsOfTheDay/dealsoftheday.html">
@@ -157,11 +162,11 @@
               </li>
               <li>
                 <a href="../CategoryToBag/categorytobag.html">
-                  CATEGORY OF THE BAG
-                </a>
+                  CATEGORY OF THE BAG</a
+                >
               </li>
               <li>
-                <a href="../DesktopEssential/desktopessential.html">
+                <a href="../DesktopEssential/desktop-essential.html">
                   DESKTOP ESSENTIAL
                 </a>
               </li>
@@ -179,9 +184,60 @@
       </div>
       <hr />
       <!-- Category Ends -->
-      <!-- ================================================================================================================= -->
 
-      <!-- ================================================================================================================= -->
+      <!-- Middle Part Begins Here -->
+
+      <div class="container-fluid">
+        <div class="row mx-auto">
+          <h1 class="text-center">
+            <span id="topic1">Desktop</span>
+            <span id="topic2">Essentials</span>
+          </h1>
+          <div class="box1">
+            <div class="box">
+              <img src="./Images/Stitch.png" />
+              <p>Staplers, Pins & Removers</p>
+            </div>
+            <div class="box">
+              <img src="./Images/Punch.png" />
+              <p>Hole Punches</p>
+            </div>
+            <div class="box">
+              <img src="./Images/cutter.png" />
+              <p>Cutter, Paper Knives</p>
+            </div>
+          </div>
+
+          <div class="box1">
+            <div class="box">
+              <img src="./Images/Scissors.png" />
+              <p>Scissors</p>
+            </div>
+            <div class="box">
+              <img src="./Images/Calculator.png" />
+              <p>Calculators</p>
+            </div>
+            <div class="box">
+              <img src="./Images/Adhesives.png" />
+              <p>Adhesives & Glues</p>
+            </div>
+          </div>
+          <div class="box1">
+            <div class="box">
+              <img src="./Images/Stamp.png" />
+              <p>Stamps & Stamp Pads</p>
+            </div>
+            <div class="box">
+              <img src="./Images/Calculator.png" />
+              <p>Calendars & Planners</p>
+            </div>
+            <div class="box">
+              <img src="./Images/Highlighters.png" />
+              <p>Highlighters</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Footer -->
       <div class="container-fluid mt-5">
         <div class="row mx-auto">
@@ -238,10 +294,8 @@
           &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
         </p>
       </div>
-      <!-- Footer Ends -->
     </div>
-
-    <!-- ================================================================================================================= -->
+    <!-- Footer Ends -->
 
     <!-- Login Popup-->
     <div class="container-fluid login-form-wrapper">
@@ -442,6 +496,13 @@
       </div>
     </div>
     <!-- Register Pop up Ends -->
+    <!-- ================================================================================================================= -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./desktopEssential.js"></script>
   </body>
-  <script src="./desktopEssential.js"></script>
 </html>
