--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
                   CATEGORY OF THE BAG
                 </a>
               </li>
-              <li><a href="./index.html"> DESKTOP ESSENTIAL </a></li>
+              <li>
+                <a href="./Pages/DesktopEssential/desktop-essential.html">
+                  DESKTOP ESSENTIAL
+                </a>
+              </li>
               <li><a href="./Pages/ContactUs/contact.html"> CONTACT US </a></li>
               <li><a href="./Pages/AboutUs/about.html">ABOUT US </a></li>
             </ul>
