--- a/Pages/DealsOfTheDay/dealsoftheday.html
+++ b/Pages/DealsOfTheDay/dealsoftheday.html
@@ -226,37 +226,60 @@
 
       <div class="container-fluid">
         <div class="row gx-5 mx-auto">
-          <div class="col-1 d-flex align-items-center justify-content-center">
+          <div
+            class="col-1 p-0 d-flex align-items-center justify-content-start"
+          >
             <img src="./Images/left.png" class="img-fluid icon" alt="" />
           </div>
           <div class="col-10">
             <div class="row gx-5 img-wrapper">
-              <div class="col-md-3 mx-0 col-6">
+              <div class="col-md-3 col-6">
                 <img src="./Images/first.png" class="img-fluid" alt="" />
               </div>
-              <div class="col-md-3 mx-0 col-6">
+              <div class="col-md-3 col-6">
                 <img src="./Images/second.png" class="img-fluid" alt="" />
               </div>
-              <div class="col-md-3 mx-0 col-6">
+              <div class="col-md-3 col-6">
                 <img src="./Images/third.png" class="img-fluid" alt="" />
               </div>
-              <div class="col-md-3 mx-0 col-6">
+              <div class="col-md-3 col-6">
                 <img src="./Images/fourth.png" class="img-fluid" alt="" />
               </div>
             </div>
           </div>
-          <div class="col-1 d-flex align-items-center justify-content-end">
+          <div class="col-1 d-flex p-0 align-items-center justify-content-end">
             <img src="./Images/right.png" class="img-fluid icon" alt="" />
           </div>
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div class="container-fluid img-wrap my-5">
         <div class="row mx-auto">
-          <div class="col-md-4">
-            <img src="./Images/todayOffer.png" alt="" />
+          <div class="col-md-4 text-center my-4 my-md-0">
+            <img src="./Images/todayOffer.png" class="img-fluid" alt="" />
           </div>
-          <div class="col-md-8"></div>
+          <div class="col-md-8">
+            <div class="row gy-1 gy-lg-2 S-img-wrap">
+              <div class="col-4">
+                <img src="./Images/Sfirst.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="./Images/Ssecond.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="./Images/Sthird.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="./Images/Sforurth.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="./Images/Sfifth.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="./Images/Ssixth.png" class="img-fluid" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- Images Section Ends -->
