--- a/Pages/Yourcart/yourcart.html
+++ b/Pages/Yourcart/yourcart.html
@@ -51,7 +51,7 @@
                       placeholder="Search Here"
                       aria-label="Search"
                     />
-                    <button class="btn submit-btn p-0 m-0" type="submit">
+                    <button class="submit-btn p-0 m-0" type="submit">
                       Submit
                     </button>
                   </form>
@@ -107,8 +107,8 @@
         </nav>
       </header>
       <!-- Navbar  Ends -->
-      <!-- ================================================================================================================= -->
-      <!-- Category  -->
+      <!-- Category -->
+
       <div class="container-fluid pt-2">
         <div class="row mx-auto">
           <div
@@ -179,9 +179,189 @@
       </div>
       <hr />
       <!-- Category Ends -->
-      <!-- ================================================================================================================= -->
 
-      <!-- ================================================================================================================= -->
+      <!-- Cart Section  -->
+
+      <div class="container-fluid">
+        <div class="row main mx-auto">
+          <div class="col-12">
+            <h1 class="text-center py-5"><span class="y">Y</span>our Cart</h1>
+          </div>
+
+          <div class="col-12 overflow-scroll px-5">
+            <div class="d-flex heading-wrapper">
+              <div class="Item">
+                <h2>Item</h2>
+              </div>
+              <div class="Shipping text-center">
+                <h2>Shipping from</h2>
+              </div>
+              <div class="Quantity text-center">
+                <h2>Quantity</h2>
+              </div>
+              <div class="Shipping-cost text-center">
+                <h2>Shipping Cost</h2>
+              </div>
+              <div class="price text-center">
+                <h2>Price</h2>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="item-wrapper py-3 d-flex">
+                <div class="Item d-flex gap-3 align-items-center">
+                  <div>
+                    <img src="./Images/item.png" class="img-fluid" alt="" />
+                  </div>
+                  <div>
+                    <h3>Product Name</h3>
+                    <p class="desc">Short description</p>
+                    <button class="remove">remove</button>
+                  </div>
+                </div>
+                <div class="Shipping">Mami</div>
+                <div class="Quantity d-flex gap-3 align-items-center">
+                  <button id="add" class="add">+</button>
+                  <input id="quantity" value="0" type="text" />
+                  <button id="sub" class="sub">-</button>
+                </div>
+                <div
+                  class="Shipping-cost d-flex flex-column align-items-center"
+                >
+                  <h4>Est. Shopping</h4>
+                  <h5 class="ship-price">$ 0</h5>
+                </div>
+                <div class="Price">
+                  <h6>$ 0</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="item-wrapper py-3 d-flex">
+                <div class="Item d-flex gap-3 align-items-center">
+                  <div>
+                    <img src="./Images/item.png" class="img-fluid" alt="" />
+                  </div>
+                  <div>
+                    <h3>Product Name</h3>
+                    <p class="desc">Short description</p>
+                    <button class="remove">remove</button>
+                  </div>
+                </div>
+                <div class="Shipping">Mami</div>
+                <div class="Quantity d-flex gap-3 align-items-center">
+                  <button id="add" class="add">+</button>
+                  <input id="quantity" value="0" type="text" />
+                  <button id="sub" class="sub">-</button>
+                </div>
+                <div
+                  class="Shipping-cost d-flex flex-column align-items-center"
+                >
+                  <h4>Est. Shopping</h4>
+                  <h5 class="ship-price">$ 0</h5>
+                </div>
+                <div class="Price">
+                  <h6>$ 0</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="item-wrapper py-3 d-flex">
+                <div class="Item d-flex gap-3 align-items-center">
+                  <div>
+                    <img src="./Images/item.png" class="img-fluid" alt="" />
+                  </div>
+                  <div>
+                    <h3>Product Name</h3>
+                    <p class="desc">Short description</p>
+                    <button class="remove">remove</button>
+                  </div>
+                </div>
+                <div class="Shipping">Mami</div>
+                <div class="Quantity d-flex gap-3 align-items-center">
+                  <button id="add" class="add">+</button>
+                  <input id="quantity" value="0" type="text" />
+                  <button id="sub" class="sub">-</button>
+                </div>
+                <div
+                  class="Shipping-cost d-flex flex-column align-items-center"
+                >
+                  <h4>Est. Shopping</h4>
+                  <h5 class="ship-price">$ 0</h5>
+                </div>
+                <div class="Price">
+                  <h6>$ 0</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="item-wrapper py-3 d-flex">
+                <div class="Item d-flex gap-3 align-items-center">
+                  <div>
+                    <img src="./Images/item.png" class="img-fluid" alt="" />
+                  </div>
+                  <div>
+                    <h3>Product Name</h3>
+                    <p class="desc">Short description</p>
+                    <button class="remove">remove</button>
+                  </div>
+                </div>
+                <div class="Shipping">Mami</div>
+                <div class="Quantity d-flex gap-3 align-items-center">
+                  <button id="add" class="add">+</button>
+                  <input id="quantity" value="0" type="text" />
+                  <button id="sub" class="sub">-</button>
+                </div>
+                <div
+                  class="Shipping-cost d-flex flex-column align-items-center"
+                >
+                  <h4>Est. Shopping</h4>
+                  <h5 class="ship-price">$ 0</h5>
+                </div>
+                <div class="Price">
+                  <h6>$ 0</h6>
+                </div>
+              </div>
+              <hr />
+            </div>
+          </div>
+
+          <div class="col-12 d-flex justify-content-between align-items-center">
+            <div class="col-md-3">
+              <div class="ms-4">
+                <h4>We accepet payment option :</h4>
+                <img
+                  src="./Images/payment-removebg-preview 1.png"
+                  class="img-fluid payment"
+                  alt=""
+                />
+                <button class="continue">
+                  <a class="continue" href="/">Continue Shopping</a>
+                </button>
+              </div>
+            </div>
+            <div class="col-md-3 py-5 subtotal-wrapper">
+              <div class="d-flex justify-content-between">
+                <h4 class="mt-2">Subtotal :</h4>
+                <h2 class="subtotal">$ 0</h2>
+              </div>
+              <div class="d-flex justify-content-between">
+                <h4 class="mt-2">Estimated shipping :</h4>
+                <h2 class="estimated-shipping">$ 0</h2>
+              </div>
+              <div class="d-flex justify-content-between">
+                <h4 class="mt-2">Total :</h4>
+                <h2 class="total">$ 0</h2>
+              </div>
+              <div class="text-center">
+                <button class="continue">Secure Checkout</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cart Section Ends -->
+
       <!-- Footer -->
       <div class="container-fluid mt-5">
         <div class="row mx-auto">
@@ -210,7 +390,7 @@
               <li class="list-group-item">YOUR PROFILE</li>
               <li class="list-group-item mt-4">Personal data</li>
               <li class="list-group-item">order</li>
-              <li class="list-group-item">Addresses</li>
+              <li class="list-group-item">add btnresses</li>
               <li class="list-group-item">Coupons</li>
             </ul>
           </div>
@@ -231,7 +411,6 @@
         </div>
       </div>
       <hr />
-      <!-- ================================================================================================================= -->
 
       <div class="p-2">
         <p class="text-center footer-text">
@@ -240,8 +419,6 @@
       </div>
       <!-- Footer Ends -->
     </div>
-
-    <!-- ================================================================================================================= -->
 
     <!-- Login Popup-->
     <div class="container-fluid login-form-wrapper">
@@ -304,7 +481,6 @@
       </div>
     </div>
     <!-- Login Popup Ends-->
-    <!-- ================================================================================================================= -->
 
     <!-- Register Pop up -->
     <div class="container-fluid p-0">
@@ -442,6 +618,180 @@
       </div>
     </div>
     <!-- Register Pop up Ends -->
+
+    <!-- Payment Section  -->
+
+    <div class="container-fluid">
+      <div class="row checkout-row mx-auto">
+        <div class="col-lg-6 checkout-firstHalf">
+          <div class="row">
+            <div
+              class="col-lg2 d-flex justify-content-between align-items-center"
+            >
+              <img
+                src="./Images/checkout-logo.png"
+                class="img-fluid checkout-logo-icon"
+                alt=""
+              />
+              <h1 class="text-center desktop-payment">
+                <span class="y">P</span>ayment
+              </h1>
+            </div>
+            <h1 class="text-center mt-4 mobile-payment">
+              <span class="y">P</span>ayment
+            </h1>
+
+            <div class="col-lg-12">
+              <div
+                class="d-flex checkout-logo gap-4 align-items-center justify-content-center"
+              >
+                <img src="./Images/gpay.png" alt="" class="img-fluid w-100" />
+                <img src="./Images/paypal.png" alt="" class="img-fluid w-100" />
+                <img
+                  src="./Images/apple-pay.png"
+                  alt=""
+                  class="img-fluid w-100"
+                />
+                <img src="./Images/skrill.png" alt="" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div
+              class="col-12 d-flex justify-content-center gap-1 mt-4 align-content-center"
+            >
+              <img
+                src="./Images/line.png"
+                class="img-fluid checkout-line"
+                alt=""
+              />
+              <p class="or-con">OR CONTINUE BELOW TO PAY WITH A CREDIT CARD</p>
+              <img
+                src="./Images/line.png"
+                class="img-fluid checkout-line"
+                alt=""
+              />
+            </div>
+
+            <form action="">
+              <div class="col-12">
+                <div class="d-flex flex-column">
+                  <label class="email-label" for="email"
+                    >Contact-information</label
+                  >
+                  <input
+                    class="w-100"
+                    type="text"
+                    placeholder="Email"
+                    id="email"
+                    type="email"
+                  />
+                  <div>
+                    <input id="checkbox" type="checkbox" class="checkbox" />
+                    <label class="checkbox-label" for="checkbox"
+                      >Email me with news and offers</label
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <h1 class="address">Shiping Address</h1>
+              </div>
+
+              <div class="col-lg-12 my-3 d-lg-flex gap-4">
+                <input
+                  type="text"
+                  class="w-100"
+                  id="email"
+                  placeholder="First Name"
+                />
+                <input
+                  type="text"
+                  class="w-100 my-3 my-lg-0"
+                  id="email"
+                  placeholder="Last Name"
+                />
+              </div>
+              <div class="my-3">
+                <input
+                  type="text "
+                  id="email"
+                  class="w-100"
+                  placeholder="Company (required for business addresses)"
+                />
+              </div>
+              <div class="my-3">
+                <input
+                  type="text "
+                  id="email"
+                  class="w-100"
+                  placeholder="Address"
+                />
+              </div>
+              <div>
+                <input
+                  type="text "
+                  id="email"
+                  class="w-100"
+                  placeholder="Appartment,suite,etc.  (optional)"
+                />
+              </div>
+              <div class="my-3">
+                <input
+                  type="text "
+                  id="email"
+                  class="w-100"
+                  placeholder="City"
+                />
+              </div>
+              <div class="d-flex gap-3">
+                <select id="country " name="country" class="form__select">
+                  <option value="">Select Country</option>
+                  <option selected value="USA">United States</option>
+                  <option value="CAN">Canada</option>
+                  <option value="MEX">Mexico</option>
+                  <!-- add more countries as needed -->
+                </select>
+
+                <select id="state" name="state" class="form__select">
+                  <option value="">State</option>
+                  <!-- populate with states/provinces based on selected country -->
+                </select>
+
+                <input
+                  type="text"
+                  id="email"
+                  name="zip"
+                  class="form__input"
+                  pattern="[0-9]*"
+                  maxlength="10"
+                  placeholder="Zip code"
+                  required
+                />
+              </div>
+              <div>
+                <input
+                  type="text "
+                  id="email"
+                  class="w-100"
+                  placeholder="Phone (optional)"
+                />
+              </div>
+              <div class="col-12 d-flex my-4 justify-content-end">
+                <button class="continue" type="button">
+                  Continue Shipping
+                </button>
+              </div>
+            </form>
+          </div>
+          <hr />
+        </div>
+        <div class="col-lg-6">
+          <div class="d-flex justify-content-end">
+            <img src="./Images/close-btn.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Payment Section Ends -->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
