--- a/Pages/404/404.html
+++ b/Pages/404/404.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>404 page</title>
+    <!-- custom css -->
     <link rel="stylesheet" href="./404.css" />
-    <link rel="stylesheet" href="./responsive_404.css" />
+    <!-- fontawesome css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <img src="./Images/404.png" class="img-fluid" alt="" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+    <div class="container">
+      <div class="contaner-box">
+        <div class="header">
+          <img src="logo.png" alt="" />
+          <a href="/">
+            <i class="fa-regular fa-2x fa-circle-xmark"></i>
+          </a>
+        </div>
+        <div class="content">
+          <div>
+            <h1>4<span class="yellow">0</span>4</h1>
+            <p class="title">Page Not Found!</p>
+            <p class="para">
+              We're sorry the page you requested <br />
+              could not be found.Please go back <br />
+              to homepage!
+            </p>
+          </div>
+          <a href="/" class="btn">GO TO HOMEPAGE</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
