Finished all pages

--- a/Pages/Yourcart/yourcart.html
+++ b/Pages/Yourcart/yourcart.html
@@ -872,6 +872,69 @@
       </div>
     </div>
     <!-- Payment Section Ends -->
+
+    <!-- Order succcess  -->
+    <div class="container-fluid d-none">
+      <div class="row mx-auto order-sec">
+        <div class="col-12 d-flex justify-content-end">
+          <img src="./Images/close-btn.png" alt="" />
+        </div>
+        <div
+          class="col-12 d-flex justify-content-center align-items-center gap-5 flex-column"
+        >
+          <img
+            src="./Images/footer-logo.png"
+            class="img-fluid order-logo"
+            alt=""
+          />
+          <img
+            src="./Images/success.png"
+            class="img-fluid order-success-logo"
+            alt=""
+          />
+          <h5>Thank you for your purchase</h5>
+          <h2 class="text-center">
+            Your order ID is : 12345678900 <br />
+            You will receive an order confirmation email with details of your
+            order.
+          </h2>
+
+          <button class="continue">
+            <a href="/" class="continue">Continue to Shopping</a>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Order succcess Ends -->
+    <!-- Order Failure   -->
+    <div class="container-fluid d-none">
+      <div class="row mx-auto order-sec">
+        <div class="col-12 d-flex justify-content-end">
+          <img src="./Images/close-btn.png" alt="" />
+        </div>
+        <div
+          class="col-12 d-flex justify-content-center align-items-center gap-5 flex-column"
+        >
+          <img
+            src="./Images/footer-logo.png"
+            class="img-fluid order-logo"
+            alt=""
+          />
+          <img
+            src="./Images/fail.png"
+            class="img-fluid order-success-logo"
+            alt=""
+          />
+          <h5>Sorry, payment failed</h5>
+          <h2 class="text-center">Please try a different payment method.</h2>
+
+          <button class="continue">
+            <a href="/" class="continue">Back to my order</a>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Order Failure Ends -->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
